@@ -59,6 +59,4 @@ FTP Site:
 ---------
 The current version of CGIwrap is available from:
 
-http://www.umr.edu/~cgiwrap/
-ftp://ftp.umr.edu/pub/cgi/cgiwrap/
-http://ftp.umr.edu/pub/cgi/cgiwrap/
+http://www.unixtools.org/cgiwrap/
