@@ -15,6 +15,8 @@ error message if not.
 	<LI>Now prints out path to access control files if one or both are missing.
 	<LI>Slight changes to aux groups code just in case setgroups() doesn't
 support a empty list.
+	<LI>Added some extra info to server userid error message.
+	<LI>Added some info to the FAQ.
 </UL>
 
 <P><H3>New in version 3.6.3:</H3><UL>
