@@ -17,7 +17,7 @@
 	<DT><A HREF="pubs.html">Publications mentioning CGIwrap</A>
 	<DT><A HREF="comments.html">Comments</A>
 	<P>
-	<DT><A HREF="http://www.umr.edu/~nneul/">Author's Home Page</A>
+	<DT><A HREF="http://www.unixtools.org/~nneul/">Author's Home Page</A>
 	<DT><A HREF="http://www.findmail.com/listsaver/cgiwrap/">Mailing List Archive (FindMail)</A>
 </DL>
 
